# fastapi-auth

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/config/: settings.py
app/users/: db.py  manager.py  router.py  schemas.py  utils.py
tests/: conftest.py
tests/test_config/: test_settings.py
tests/test_users/: test_db.py  test_manager.py  test_router.py  test_schemas.py  test_utils.py
